# N_Body_Simulation

./: .gitignore  CMakeLists.txt  LICENSE  NBodySimViz.py  README.md  body.h  functions.cpp  header.h  main.cpp  params.json
